update index with pa-5

--- a/index.qmd
+++ b/index.qmd
@@ -26,3 +26,5 @@ This page contains an outline of the topics, content, and assignments for the qu
 +----------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 5        | Friday, 2/21 | [Importing Data](weeks/week-5-projects-data-import.qmd)      | [Pair Activity 4: Evaluating Youth Risk](group-activities/week-5/pa-4-import-tidy-data.qmd)                                       |
 +----------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| 8        | Friday, 3/14 |                                                              | [Pair Activity 5: Military Spending in Eastern Europe](group-activities/week-8/pa-5-tidyr-dplyr.qmd)                              |
++----------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
